--- a/makedocs/source/_static/hide-downloads.css
+++ b/makedocs/source/_static/hide-downloads.css
@@ -6,3 +6,17 @@
 .sphx-glr-footer.sphx-glr-footer-example {
     display: none;
 }
+
+/* Colors taken from https://bootswatch.com/3/united/ */
+
+.admonition.warning {
+    background-color: #f2dede !important;
+    border-color: #eed3d7 !important;
+    color: #953b39 !important;
+}
+
+.admonition.note {
+    background-color: #dff0d8 !important;
+    border-color: #d6e9c6 !important;
+    color: #356635 !important;
+}
