FIX: Custom layout and stylesheet for updated Sphinx and bootstrap theme

--- a/makedocs/source/_static/custom-style.css
+++ b/makedocs/source/_static/custom-style.css
@@ -7,6 +7,11 @@
     display: none;
 }
 
+/* Left-align texts in tables by default */
+table.align-default {
+    text-align: left
+}
+
 /* Colors taken from https://bootswatch.com/3/united/ */
 
 .admonition.warning {
