FIX: Update 16d923 commit

--- a/makedocs/source/_static/custom-style.css
+++ b/makedocs/source/_static/custom-style.css
@@ -1,4 +1,9 @@
 
+/* Suppress warnings output to stderr */
+.sphx-glr-script-out {
+    display: none;
+}
+
 .sphx-glr-download-link-note {
     display: none;
 }
