--- a/makedocs/source/_static/custom-style.css
+++ b/makedocs/source/_static/custom-style.css
@@ -152,3 +152,20 @@ table.align-default {
   background: #ff6600;
   color: white;
 }
+
+/* Font embedded youtube videos */
+/* Source: https://youtu.be/9YffrCViTVk */
+
+.iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
