--- a/makedocs/source/_static/custom-style.css
+++ b/makedocs/source/_static/custom-style.css
@@ -1,3 +1,10 @@
+/*
+Workaround to fix DataFrames squashed by nbsphinx
+https://github.com/pydata/pydata-sphinx-theme/issues/1017#issuecomment-1278939428
+*/
+html div.rendered_html table {
+    table-layout: auto;
+}
 
 /* Suppress warnings output to stderr */
 .sphx-glr-script-out {
